Fix spacing issue with displaying messages on smaller devices

--- a/static/assets/css/style.css
+++ b/static/assets/css/style.css
@@ -15,7 +15,7 @@
 
 .dino-background{
     background-color: #36D96F;
-    height: 100vh;
+    min-height: 100vh;
     display: flex;
     align-items: center;
     justify-content: center;
